Fix layout issues for ProjectItem

--- a/src/scss/layouts/_projects.scss
+++ b/src/scss/layouts/_projects.scss
@@ -17,8 +17,8 @@
 
   @media screen and (min-width: 850px) {
     padding: 2rem;
-    grid-template-columns: auto 3fr 1fr;
-    grid-template-rows: .5fr 1fr 3fr .5fr;
+    grid-template-columns: 3fr 1fr;
+    grid-template-rows: .5fr 1fr 3fr .5fr auto;
     justify-items: start;
   }
 }
@@ -45,7 +45,7 @@
   @media screen and (min-width: 850px) {
     padding-block: .45rem;
     padding-inline: .5rem;
-    grid-column: 3 / 4;
+    grid-column: 2 / 3;
     grid-row: 4 / 5;
   }
 }
@@ -62,9 +62,12 @@
     }
   }
 
-  @media screen and (min-width: 580px) {
+  @media screen and (min-width: 850px) {
+    justify-self: center;
     grid-column: 1 / 2;
-    grid-row: 2 / 4;
+    grid-row: 5 / 6;
+    gap: .5rem;
+    @include mixin.flexbox(center, center);
   }
 }
 .projects-detail {
@@ -86,7 +89,7 @@
 
   @media screen and (min-width: 850px) {
     margin-bottom: .5rem;
-    grid-column: 3 / 4;
+    grid-column: 2 / 3;
     grid-row: 2 / 3;
     @include mixin.flexbox(flex-start, flex-start, column);
   }
@@ -99,7 +102,7 @@
   grid-row: 2 / 3;
 
   @media screen and (min-width: 850px) {
-    grid-column: 2 / 3;
+    grid-column: 1 / 2;
     grid-row: 2 / 5;
   }
 }
@@ -137,7 +140,7 @@
   }
 
   @media screen and (min-width: 850px) {
-    grid-column: 3 / 4;
+    grid-column: 2 / 3;
     grid-row: 3 / 4;
   }
 }
